[tool.poetry]
name = "ahc030"
version = "0.1.0"
description = ""
authors = ["terry-u16 <terry-u16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
optuna = "^3.5.0"
pymysql = "^1.1.0"
plotly = "^5.19.0"
scikit-learn = "^1.4.1.post1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
